fix spacing on nav

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -8,13 +8,30 @@
   width: 100%;
   position: fixed; 
   z-index: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 ul {
+  background-color: red;
+  display: flex;
+  flex-direction: row; 
+  justify-content: flex-end; 
+} 
+
+.right {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.left {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
 }
+
 
 li {
   list-style-type: none;
